<resources>
    <string name="app_name">Employee Manager</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="employees">Employees</string>
    <string name="add_employee">Add Employee</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="salary">Salary</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirm">Are you sure you want to delete this employee?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_invalid_input">Please check your input</string>
</resources>
